--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <title>Gros Cartons</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!--MARK HEADER-->
+    <header class="container-fluid header">
+        <div class="container">
+            <a href="#" class="logo">Mon Site</a>
+            <nav class="menu">
+                <a href="#">Accueil</a> |
+                <a href="#">A propos</a> |
+                <a href="#">Portfolio</a> |
+                <a href="#">Contact</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
