--- a/index.html
+++ b/index.html
@@ -15,11 +15,39 @@
             <a href="#" class="logo">Mon Site</a>
             <nav class="menu">
                 <a href="#">Accueil</a> |
-                <a href="#">A propos</a> |
-                <a href="#">Portfolio</a> |
+                <a href="#">Nos offres</a> |
+                <a href="#">À Propos</a> |
                 <a href="#">Contact</a>
             </nav>
         </div>
     </header>
+    <!--MARK HERO BANNER-->
+    <section class="container-fluid banner">
+        <div class="container inner-banner">
+            <form action="">
+                <input type="text" id="dateArrival" placeholder="Date d'arrivée">
+                <input type="text" id="dateDepart" placeholder="Date de départ">
+                <button class="btn btn-custom">Je déménage</button>
+            </form>
+        </div>
+    </section>
+    <!--MARK COMMENT CA MARCHE-->
+    <section class="container-fluid function">
+        <div class="row">
+            <img src="" alt="" class="funcImageRight">
+            <p class="funcTextLeft"></p>
+        </div>
+        <div class="row">
+            <img src="" alt="" class="funcImageLeft">
+            <p class="funcTextRight"></p>
+        </div>
+        <div class="row">
+            <img src="" alt="" class="funcImageRight">
+            <p class="funcTextLeft"></p>
+        </div>
+    </section>
+    <!--MARK PK NOUS-->
+    <!--MARK FOOTER-->
+
 </body>
 </html>
