--- a/index.html
+++ b/index.html
@@ -34,20 +34,40 @@
     <!--MARK COMMENT CA MARCHE-->
     <section class="container-fluid function">
         <div class="row">
-            <img src="" alt="" class="funcImageRight">
-            <p class="funcTextLeft"></p>
+            <div class="col-md-4 col-lg-4 col-xs-12">
+                <img src="" alt="" class="funcImageRight " style="width: 100%; height: 50px; background-color: red;">
+            </div>
+            <div class="col-md-8 col-lg-8 col-xs-12">
+                <p class="funcTextLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
         </div>
         <div class="row">
-            <img src="" alt="" class="funcImageLeft">
-            <p class="funcTextRight"></p>
+            <div class="col-md-4 col-lg-4 col-xs-12">
+                <p class="funcTextRight">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita hic impedit ipsa natus nobis porro praesentium quae quisquam veritatis voluptates.</p>
+            </div>
+            <div class="col-md-8 col-lg-8 col-xs-12">
+                <img src="" alt="" class="funcImageLeft">
+            </div>
         </div>
         <div class="row">
-            <img src="" alt="" class="funcImageRight">
-            <p class="funcTextLeft"></p>
+            <div class="col-md-4 col-lg-4 col-xs-12">
+                <img src="" alt="" class="funcImageRight">
+            </div>
+            <div class="col-md-8 col-lg-8 col-xs-12">
+                <p class="funcTextLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea esse libero officiis rerum voluptates.</p>
+            </div>
         </div>
     </section>
     <!--MARK PK NOUS-->
+    <section class="container-fluid usp">
+        <div class="col-md-4 col-lg-4 col-xs-12"></div>
+        <div class="col-md-4 col-lg-4 col-xs-12"></div>
+        <div class="col-md-4 col-lg-4 col-xs-12"></div>
+    </section>
     <!--MARK FOOTER-->
+    <section class="container-fluid footer">
+
+    </section>
 
 </body>
 </html>
